<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".LoginActivity"
        android:background="@android:color/holo_blue_light">

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:orientation="vertical"
            android:background="@android:color/white"
            android:layout_margin="32dp"
            android:padding="16dp">

        <EditText
                android:id="@+id/user_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/username"
                style="@style/Base.TextAppearance.AppCompat.Body2"/>

        <EditText
                android:id="@+id/user_pass"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/password"
                style="@style/Base.TextAppearance.AppCompat.Body2"/>

        <Button android:id="@+id/btn_login"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:text="@string/login"
                android:textAllCaps="false"
                android:layout_gravity="center"
                style="@style/Widget.AppCompat.Button.Colored"/>

        <TextView
                android:id="@+id/text_create"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/create_account"
                android:layout_gravity="center"
                android:textColor="@android:color/black"/>


    </LinearLayout>


</RelativeLayout>